--- a/lab3_front/src/assets/css/global.css
+++ b/lab3_front/src/assets/css/global.css
@@ -3,3 +3,11 @@
     padding:0;
     box-sizing: border-box;
 }
+
+a {
+    text-decoration: none;
+}
+
+.router-link-active {
+    text-decoration: none;
+}
